fix submit button overflow problem

--- a/app/postBlock.module.css
+++ b/app/postBlock.module.css
@@ -208,10 +208,11 @@
   padding: 10px;
   width: 90%;
   max-width: 800px;
-  max-height: 80%;
+  max-height: 80vh;
+  overflow: auto;
 }
 
-.editModal > div > button {
+.editModalCloseBtn {
   align-self: flex-end;
   width: 30px;
   height: 30px;
@@ -224,6 +225,6 @@
   
 }
 
-.editModal > div > button:hover {
+.editModalCloseBtn:hover {
   background: var(--foreground-hover);
 }
